# cangaroo

./: .gitignore  CMakeLists.txt
src/: AggregatedTraceViewItem.h  AggregatedTraceViewModel.cpp  AggregatedTraceViewModel.h  Backend.cpp  Backend.h  BaseTraceViewModel.cpp  CMakeLists.txt  CanDb.cpp  CanDriver.cpp  CanListener.cpp  CanListener.h  CanMessage.cpp  CanMessage.h  CanStatusWindow.cpp  CanStatusWindow.h  CanTrace.cpp  ConfigurableWidget.cpp  DbcParser.cpp  DbcParser.h  GenericCanSetupPage.cpp  GraphWindow.cpp  GraphWindow.h  LinearTraceViewModel.cpp  LinearTraceViewModel.h  Log.cpp  LogModel.h  LogWindow.cpp  LogWindow.h  MeasurementInterface.cpp  MeasurementInterface.h  MeasurementNetwork.cpp  MeasurementNetwork.h  MeasurementSetup.cpp  SelectCanInterfacesDialog.cpp  SelectCanInterfacesDialog.h  SetupDialog.cpp  SetupDialogTreeItem.cpp  SetupDialogTreeItem.h  SetupDialogTreeModel.h  SocketCanDriver.cpp  (+6 more)
