cmake_minimum_required(VERSION 3.16)

set(RELEASE_SERVICE_VERSION_MAJOR "0")
set(RELEASE_SERVICE_VERSION_MINOR "0")
set(RELEASE_SERVICE_VERSION_MICRO "5")
set(CANGAROO_VERSION "${RELEASE_SERVICE_VERSION_MAJOR}.${RELEASE_SERVICE_VERSION_MINOR}.${RELEASE_SERVICE_VERSION_MICRO}")

project(cangaroo VERSION ${CANGAROO_VERSION})

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# add_definitions(
#     -DQT_DISABLE_DEPRECATED_BEFORE=0x051500
#     -DQT_DEPRECATED_WARNINGS_SINCE=0x060000
#     -DKF_DISABLE_DEPRECATED_BEFORE_AND_AT=0x055600
#     -DKF_DEPRECATED_WARNINGS_SINCE=0x060000
# )

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)

set(QT_MAJOR_VERSION "5")
set(QT_MIN_VERSION "5.15.2")

find_package(Qt${QT_MAJOR_VERSION} ${QT_MIN_VERSION} REQUIRED NO_MODULE COMPONENTS Core Gui Widgets Xml)

find_package(nl-3 REQUIRED)
find_package(nl-route-3 REQUIRED)

add_subdirectory(src)



